[package]
name = "protohackers"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"

[dependencies]
anyhow = "1.0.68"
argh = "0.1.9"
blake3 = "1.3.3"
bytes = "1.3.0"
futures-concurrency = "7.0.0"
futures-util = { version = "0.3.25", features = ["sink"] }
itertools = "0.11.0"
nom = { version = "7.1.1", features = ["alloc"] }
parking_lot = "0.12.1"
pin-project = "1.0.12"
primes = "0.3.0"
priority-queue = "1.3.0"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec", "net"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4.2"
