[package]
name = "protohackers"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "debuginfo"

[dependencies]
anyhow = "1"
argh = "0.1.9"
blake3 = "1"
bytes = "1"
futures-concurrency = "7"
futures-util = { version = "0.3.25", features = ["sink"] }
itertools = "0.13.0"
lockfree = "0.5.1"
nom = { version = "7", features = ["alloc"] }
parking_lot = "0.12.1"
pin-project = "1"
primes = "0.4.0"
priority-queue = "2"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec", "net"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4.2"
